# pycoder

./: .__atomic-write7eca5b1f  .coveragerc  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKUP_NOTE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.sandbox  LICENSE  Makefile  README.en.md  README.md  SECURITY.md  __baseline_metrics.py  __check_routes.py  __fix_bare_except.py  __fix_logger_name.py  __fix_logger_pos.py  __fix_logger_pos2.py  __git_auto_push.bat  __git_commit_push.py  __regression.py  __reorder_imports.py  __restart.bat  __smoke.py  __test_evo.py  __verify_ai_v4.py  __verify_p1.py  __verify_p2.py  __verify_v2.py  _analyze_logs.py  _audit_evidence.py  _audit_output.txt  _audit_stderr.txt  _audit_stdout.txt  (+84 more)
.git-hooks/: install-post-commit.ps1  install-post-commit.sh  post-commit
.github/workflows/: ci.yml  security-scan.yml
.skills/: AI-Research-SKILLs.md  Claude-Red.md  Generative-Media-Skills.md  agent-skills.md  awesome-ChatGPT-repositories.md  awesome-agent-skills.md  cc-skills-golang.md  cherry-studio.md  claude-code-plugins-plus-skills.md  fast-agent.md  finance-skills.md  memU.md  notebooklm-py.md  open-knowledge.md  opengap.md  pinme.md  refly.md  skill.md  skills.md  superpowers-zh.md  web-quality-skills.md
.workbuddy/memory/: 2026-06-29.md  2026-07-07.md  2026-07-10.md  MEMORY.md
_selfcheck_temp/: test_write.txt
app/: README.md  requirements.txt
app/src/: database.py  main.py
app/tests/: test_items.py
data/: adaptive_config.json  tasks.db
data/skills/: skills.db
docs/: Codex Agent 1_1克隆完整配置与执行策略（可直接落地部署）.md  LAUNCH.md  ai-intelligence-redesign.md  api-reference.md  architecture-v2-ai-centric.md  comprehensive-diagnostic-report.md  database-architecture.md  deployment-guide.md  developer-guide.md  p0-p1-fix-comparison-report.md  pycoder-ai-capability-upgrade-plan.md  pycoder-vs-zhipu-codex-gap-analysis.md  pycoder_architecture_analysis_and_roadmap.html  pycoder_production_deployment_test_report.html  pycoder_upgrade_plan.md  system-capability-upgrade-plan.md  system-quality-assessment-report.md  ui-upgrade-v2-prototype.html  upgrade-migration-guide.md  好运助手-执行策略与hermes团队配置.md  智谱Agent 1_1克隆完整配置与执行策略（可直接落地部署）.md  生产级长开发任务自动闭环执行Agent团队设计方案 (4).md
docs/ai-architecture/: architecture-design.md  implementation-roadmap.md
docs/design/: generate_poster.py  pycoder_vscode_redesign_plan.md
docs/fix-plan/: 00-overview.md  01-p0-security-fixes.md  02-p1-architecture-improvements.md  03-p2-quality-enhancements.md
docs/reports/: comprehensive-review-report.md  final-comprehensive-report.md  pycoder_audit_report.md  pycoder_final_report.md  test-report-2026-07-22.md
docs/test-report/: README.md  __run_compat.py  __run_tests.py  test-compatibility.json  test-plan.md  test-report.md  test-results.json
docs/upgrade-plan/: baseline-metrics.md  capability-upgrade-plan.md  comprehensive-fix-report.md  diagnosis-and-upgrade-v3.md  perfect-upgrade-plan.md  pycoder-ai-selfevo-upgrade-v2.md  pycoder-ai-supreme-upgrade-plan.md
memory/: README.md  __init__.py
multimodal/: README.md  __init__.py
observability/: README.md  __init__.py
plugins/: README.md  __init__.py
pycoder/: __init__.py  __main__.py
pycoder/_compat/: __init__.py  popen.py
pycoder/adapters/: __init__.py  bridge_llm_provider.py  docker_sandbox.py  local_file_system.py  sandbox_selector.py  subprocess_sandbox.py
pycoder/ai/: __init__.py  auto_fixer.py
pycoder/brain/: __init__.py  adaptive_executor.py  agent_selector.py  agent_swarm.py  consciousness.py  context_enhancer.py  cost_controller.py  dag_scheduler.py  execution_report.py  feedback_loop.py  hermes_agent.py  intelligent_router.py  intent_analyzer.py  memory_engine.py  model_router.py  pipeline_engine.py  quality_gate.py  shared_state.py  specialized_agents.py  task_decomposer.py  task_planner.py  task_snapshot.py  tool_planner.py
pycoder/browser/: __init__.py  access_control.py  browser_pool.py  proxy_manager.py
pycoder/bus/: __init__.py  mcp_adapter.py  monitor.py  protocol.py  registry.py  router.py  transformer.py
pycoder/capabilities/: __init__.py  degradation.py  permissions.py
pycoder/config/: __init__.py  settings.py
pycoder/core/: __init__.py  dal.py  db_schema.py  di.py  errors.py  security.py  shell_translator.py
pycoder/electron/: .gitignore  __task_test.txt  build.bat  forge.config.js  package-lock.json  package.json  start.bat  tsconfig.json  tsconfig.main.json  tsconfig.node.json  tsconfig.preload.json  vite.config.ts  (+1 more)
requirements/: requirements-dev.in  requirements-extras.txt  requirements.in
safety/: README.md  __init__.py
scripts/: _compile_check.py  _db_check.py  _e2e_config_test.py  _e2e_final_test.py  _e2e_full_check.py  _e2e_selfcheck.py  _fetch_prompts.py  _health.py  _health_check.py  _read_sessions.py  _test_ext_api.py  _v_ext.ps1  _verify_tool_names.py  check_readme_consistency.py  print_commands.py  pycoder.bat  pycoder.ps1  run.py  run_evolution.py  test.bat  test.sh
tests/: __init__.py  _full_acceptance_test.py  conftest.py  e2e_test.py  full_e2e_test.py  test_acceptance_engine_coverage.py  test_agent_bus_coverage.py  test_agent_loop.py  test_agent_memory.py  test_agent_orchestrator_unit.py  test_agent_scheduler.py  test_agent_strategies.py  test_agent_swarm.py  test_agent_tool_loop_coverage.py  test_agent_tools_unit.py  test_agents_api.py  test_agents_generator_coverage.py  test_ai_modules.py  test_auth.py  test_auto_installer_coverage.py  test_auto_patch.py  test_auto_upgrade_coverage.py  test_autonomous_api_coverage.py  test_autonomous_pipeline.py  test_autonomous_pipeline_coverage.py  test_brain_smart_routing.py  test_browser.py  test_browser_ai_coverage.py  test_browser_inspector_coverage.py  test_bus_capabilities_modules.py  test_bus_monitor.py  test_bus_transformer.py  test_capabilities_degradation.py  test_capabilities_permissions.py  test_chat_handler_coverage.py  test_chat_routes_coverage.py  test_ci_config.py  test_circuit_breaker.py  test_closed_loop_engine.py  test_closed_loop_learning.py  (+169 more)
(+578 files in other folders)
