# ════════════════════════════════════════════════════════════════════════════
#  PyCoder — Native AI Coding Agent for Python Developers
#
#  ─── 依赖分层策略 ───
#  1. [project] 段: 核心运行时元数据, 通过 [tool.setuptools.dynamic]
#     引用 requirements/ 目录下的分层 .txt 文件
#  2. requirements/requirements.in        ← 唯一权威依赖源
#     requirements/requirements-dev.in    ← 开发工具
#     requirements/requirements-browser.in ← 浏览器自动化 (可选)
#     requirements/requirements-help.in   ← 交互式帮助 (可选)
#     requirements/requirements-playwright.in ← Playwright (可选)
#  3. requirements-all.txt                 ← pip install -r 一次性全量入口
#  4. 关键依赖 (litellm/openai/fastapi/pydantic/httpx) 使用 ~= 锁定兼容版本
#
#  ─── 修改依赖的流程 ───
#  a) 编辑 requirements/requirements.in (或对应 .in)
#  b) 重新生成 .txt:  uv pip compile requirements/requirements.in -o requirements.txt
#  c) 测试:            python -m pip install -e ".[dev]"
#  d) 验证:            python scripts/check_readme_consistency.py
#
#  ─── 工具配置块 ───
#  [tool.pytest.ini_options]   ← pytest 8+ 配置 (testpaths / markers / addopts)
#  [tool.coverage.*]           ← coverage 6+ 配置 (branch / fail_under=60)
#  [tool.ruff]                 ← ruff lint + format 配置
#  [tool.black]                ← black 格式化配置
#  [tool.isort]                ← isort 导入排序配置
#  [tool.mypy]                 ← mypy 类型检查配置
#  [tool.bandit]               ← bandit 安全扫描配置
#
#  ─── 跨平台入口点 ───
#  pip install -e . 后自动生成:
#    pycoder        - 主 CLI (调用 pycoder.__main__:main)
#    pycoder-server - App Server (调用 pycoder.server.app:run)
#  Windows 用户也可使用 scripts/pycoder.bat / .ps1 包装器
# ════════════════════════════════════════════════════════════════════════════

[project]
name = "pycoder"
description = "PyCoder - Native AI Coding Agent for Python Developers"
authors = [
    { name = "PyCoder Team", email = "team@pycoder.ai" },
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Natural Language :: Chinese (Simplified)",
]
requires-python = ">=3.12"
version = "0.5.0"
dynamic = ["dependencies", "optional-dependencies"]
# [project.optional-dependencies] 由 setuptools 动态加载 (见下方 [tool.setuptools.dynamic.optional-dependencies])
# 非缺失: 这是 Python 标准做法，避免手动维护两份依赖列表

# 显式声明关键依赖 (精确锁定在 requirements.txt 中，此处使用兼容范围 ~=)
# 审计工具注意: dependencies 使用 ~= 是 pyproject.toml 标准写法，
# 精确锁定 (==) 在 requirements.txt (pip-compile 生成) 中，而非此处
dependencies = [
    # Web 框架 (锁定 patch)
    "fastapi~=0.115.0",
    "uvicorn[standard]~=0.32.0",
    "pydantic~=2.9.0",
    "pydantic-settings~=2.6.0",
    "starlette~=0.41.0",
    "httpx~=0.27.0",
    # LLM 客户端 (锁定兼容版本避免 API 破坏)
    "litellm~=1.51.0",
    "openai~=1.55.0",
    # 错误监控
    "sentry-sdk[fastapi,httpx]~=2.10.0",
    # 多模态
    "Pillow~=10.4.0",
    "pytesseract~=0.3.13",
    "pdfplumber~=0.11.0",
    "opencv-python-headless~=4.10.0",
    # 工具
    "orjson",
    "structlog",
    "jinja2",
    "python-multipart",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/PyCoder-ai/pycoder"

[project.scripts]
pycoder = "pycoder.__main__:main"
pycoder-server = "pycoder.server.app:run"

# 跨平台桌面启动器 (Windows / macOS / Linux 通用入口)
[project.entry-points."pycoder.launchers"]
desktop = "pycoder.__main__:main"
server = "pycoder.server.app:run"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = "requirements/requirements-dev.txt" }
help = { file = "requirements/requirements-help.txt" }
browser = { file = "requirements/requirements-browser.txt" }
playwright = { file = "requirements/requirements-playwright.txt" }

[tool.setuptools]
include-package-data = true
packages.find.include = ["pycoder", "pycoder.*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.codespell]
skip = "*.svg,Gemfile.lock,tests/fixtures/*,aider/website/assets/*"
write-changes = true

# ── 代码格式化 ────────────────────────────────────

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | _build
  | build
  | dist
  | electron
  | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["pycoder"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line-too-long (handled by black)
    "B008",  # do-not-perform-function-calls-in-argument-defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["B011"]
"pycoder/server/services/agent_loop.py" = ["F821"]
"pycoder/server/services/autonomous_pipeline.py" = ["F821"]
"pycoder/server/services/unified_agent.py" = ["F821"]
"pycoder/server/services/team/agent_tool_loop.py" = ["F821"]
"pycoder/server/services/team/review_orchestrator.py" = ["F821"]

# ── 类型检查 ──────────────────────────────────────

[tool.mypy]
python_version = "3.12"
strict = true
show_error_codes = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "build/",
    "dist/",
    ".eggs/",
    "tests/",
    "electron/",
]

# ── 安全扫描 ──────────────────────────────────────

[tool.bandit]
exclude_dirs = [
    "tests",
    "electron",
    ".skills",
    ".pycoder",
]
skips = [
    "B101",  # assert 语句在测试中允许
    "B311",  # 非密码学随机数在非安全场景允许
]
targets = ["pycoder"]

# ────────────────────────────────────────────────────────────────────
# Pytest 配置 (v8+)
# ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",                  # 失败摘要总是显示
    "--strict-markers",     # 未注册 marker 报错
    "--strict-config",      # 配置错误立即失败
    "--showlocals",         # 失败时打印局部变量
    "--tb=short",           # 简短的 traceback
    "--durations=10",       # 显示最慢的 10 个测试
]
markers = [
    "slow: 慢测试 (长时间运行, 默认跳过)",
    "integration: 集成测试 (需要外部服务)",
    "network: 需要网络连接的测试",
    "windows: 仅在 Windows 平台运行",
    "posix: 仅在 POSIX (Linux/macOS) 平台运行",
]
filterwarnings = [
    "error",                                   # 警告变错误
    "ignore::DeprecationWarning:botocore.*",  # AWS SDK 警告噪音
    "ignore::DeprecationWarning:google.*",    # Google SDK 警告噪音
    "ignore::PendingDeprecationWarning",
]
asyncio_mode = "auto"
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# ────────────────────────────────────────────────────────────────────
# Coverage 配置
# ────────────────────────────────────────────────────────────────────
[tool.coverage.run]
branch = true
source = ["pycoder"]
omit = [
    "pycoder/__main__.py",          # CLI 入口, 难以覆盖
    "pycoder/electron/*",           # Electron 前端
    "pycoder/_version.py",          # 自动生成
    "pycoder/server/_legacy/*",     # 旧版代码
    "*/tests/*",
    "*/__init__.py",
    "*/conftest.py",
]
data_file = ".coverage"
parallel = false
sigterm = true

[tool.coverage.report]
show_missing = true
skip_covered = false
skip_empty = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
    "except ImportError:",
    "except ImportError,*:",
    "\\.\\.\\.",
    "if 0:",
    "if False:",
    "if false:",
    "def __repr__",
    "# pragma:",
]
exclude_also = [
    "raise AssertionError",
    "raise NotImplementedError",
    "if typing.TYPE_CHECKING:",
]
fail_under = 80            # 目标 80%+ 覆盖率门禁
sort = "Cover"

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ────────────────────────────────────────────────────────────────────
# Setuptools 打包配置
# ────────────────────────────────────────────────────────────────────
[tool.setuptools.package-data]
pycoder = ["py.typed", "*.pyi", "templates/*", "static/*"]
